@@ -42,34 +42,58 @@
  */
 
 /**
- * @var openvrml::bounding_volume::inside
+ * @enum openvrml::bounding_volume::intersection
  *
- * @brief Results of an intersection; indicates that the tested volume is
- *      entirely inside the target volume.
+ * @brief Indicates the type of intersection.
  */
 
 /**
- * @var openvrml::bounding_volume::outside
+ * @var openvrml::bounding_volume::intersection openvrml::bounding_volume::outside
  *
- * @brief Results of an intersection; indicates that the tested volume is
- *      entirely outside the target volume.
+ * @brief Indicates that the tested volume is entirely outside the target
+ *        volume.
  */
 
 /**
- * @var openvrml::bounding_volume::partial
+ * @var openvrml::bounding_volume::intersection openvrml::bounding_volume::partial
  *
- * @brief Results of an intersection; indicates that the tested volume
- *      intersects with the target volume.
+ * @brief Indicates that the tested volume intersects with the target volume.
  */
 
 /**
- * @brief Destructor.
+ * @var openvrml::bounding_volume::intersection openvrml::bounding_volume::inside
+ *
+ * @brief Indicates that the tested volume is entirely inside the target
+ *        volume.
  */
-openvrml::bounding_volume::~bounding_volume() {}
 
 /**
- * @fn bool openvrml::bounding_volume::maximized() const
+ * @brief Destroy.
+ */
+openvrml::bounding_volume::~bounding_volume() throw ()
+{}
+
+/**
+ * @brief Maximize the bounding volume.
  *
+ * Delegates to <code>bounding_volume::do_maximize</code>.
+ *
+ * @see maximized
+ */
+void openvrml::bounding_volume::maximize()
+{
+    this->do_maximize();
+}
+
+/**
+ * @fn void openvrml::bounding_volume::do_maximize()
+ *
+ * @brief Called by <code>bounding_volume::maximize</code>.
+ *
+ * @see maximize
+ */
+
+/**
  * @brief Indicates whether the bounding volume is maximized.
  *
  * The convention is that nodes that should be rendered unconditionally set a
@@ -82,18 +106,22 @@ openvrml::bounding_volume::~bounding_volume() {}
  *
  * @see openvrml::bounding_volume::maximize
  */
+bool openvrml::bounding_volume::maximized() const throw ()
+{
+    return this->do_maximized();
+}
 
 /**
- * @fn void openvrml::bounding_volume::maximize()
+ * @fn bool openvrml::bounding_volume::do_maximized() const
  *
- * @brief Maximize the bounding volume.
+ * @brief Called by <code>bounding_volume::maximized</code>.
  *
- * @see maximized
+ * @return @c true if the bounding voume is maximized; @c false otherwise.
+ *
+ * @see openvrml::bounding_volume::maximized
  */
 
 /**
- * @fn openvrml::bounding_volume::intersection openvrml::bounding_volume::intersect_frustum(const openvrml::frustum & frustum) const
- *
  * @brief Intersect this <code>bounding_volume</code> with a
  *        <code>frustum</code>.
  *
@@ -111,17 +139,59 @@ openvrml::bounding_volume::~bounding_volume() {}
  * @see openvrml::bounding_volume::transform
  * @see openvrml::bounding_volume::ortho_transform
  */
+openvrml::bounding_volume::intersection
+openvrml::bounding_volume::
+intersect_frustum(const openvrml::frustum & frustum) const
+{
+    return this->do_intersect_frustum(frustum);
+}
 
 /**
- * @fn void openvrml::bounding_volume::extend(const bounding_volume & bv)
+ * @fn openvrml::bounding_volume::intersection openvrml::bounding_volume::do_intersect_frustum(const openvrml::frustum & frustum) const
  *
+ * @brief Called by <code>bounding_volume::intersect_frustum</code>
+ *
+ * @param frustum   the frustum.
+ *
+ * @return inside, outside, or partial.
+ *
+ * @see openvrml::bounding_volume::transform
+ * @see openvrml::bounding_volume::ortho_transform
+ */
+
+/**
  * @brief Extend the bounding_volume to enclose @p bv.
  *
  * @param bv    a bounding volume.
  */
+void openvrml::bounding_volume::extend(const bounding_volume & bv)
+{
+    // doing two tests isn't a big deal, if there get to be too many
+    // more kinds of bounding volumes, move to a double dispatch
+    // pattern.
+    const bounding_sphere * bs = 0;
+    const axis_aligned_bounding_box * ab = 0;
+    if ((bs = dynamic_cast<const bounding_sphere *>(&bv))) {
+        this->extend(*bs);
+    } else if ((ab = dynamic_cast<const axis_aligned_bounding_box *>(&bv))) {
+        this->extend(*ab);
+    }
+}
 
 /**
- * @fn void openvrml::bounding_volume::extend(const vec3f & p)
+ * @brief Extend the bounding volume to enclose @p p.
+ *
+ * Delegates to <code>bounding_volume::do_extend</code>.
+ *
+ * @param p a point
+ */
+void openvrml::bounding_volume::extend(const vec3f & p)
+{
+    this->do_extend(p);
+}
+
+/**
+ * @fn void openvrml::bounding_volume::do_extend(const vec3f & p)
  *
  * @brief Extend the bounding volume to enclose @p p.
  *
@@ -129,9 +199,10 @@ openvrml::bounding_volume::~bounding_volume() {}
  */
 
 /**
- * @fn void openvrml::bounding_volume::extend(const axis_aligned_bounding_box & bbox)
+ * @fn void openvrml::bounding_volume::do_extend(const axis_aligned_bounding_box & bbox)
  *
- * @brief Extend the bounding volume to enclose @p bbox.
+ * @brief Called by
+ *        <code>bounding_volume::extend(const bounding_volume &)</code>.
  *
  * @param bbox  an axis-aligned bounding box.
  */
@@ -139,24 +210,35 @@ openvrml::bounding_volume::~bounding_volume() {}
 /**
  * @fn void openvrml::bounding_volume::extend(const bounding_sphere & b)
  *
- * @brief Extend this bvolume to enclose the given sphere.
+ * @brief Called by
+ *        <code>bounding_volume::extend(const bounding_volume &)</code>.
  *
  * @param b a bounding sphere
  */
 
 /**
- * @fn void openvrml::bounding_volume::enclose(const std::vector<vec3f> & points)
- *
  * @brief Enclose the given set of points.
  *
  * This resets the volume from any previous values.
+ *
+ * Delegates to <code>bounding_volume::do_enclose</code>.
+ *
+ * @param points    points.
+ */
+void openvrml::bounding_volume::enclose(const std::vector<vec3f> & points)
+{
+    this->do_enclose(points);
+}
+
+/**
+ * @fn void openvrml::bounding_volume::do_enclose(const std::vector<vec3f> & points)
+ *
+ * @brief Called by <code>bounding_volume::enclose</code>.
  *
  * @param points    points.
  */
 
 /**
- * @fn void openvrml::bounding_volume::ortho_transform(const mat4f & M)
- *
  * @brief Transform this bounding volume using an orthogonal transfom.
  *
  * Orthogonal transformations preserve angles. They include
@@ -167,12 +249,24 @@ openvrml::bounding_volume::~bounding_volume() {}
  * orthogonal, otherwise the results are undefined. If in doubt,
  * call transform instead and take the speed hit.
  *
+ * Delegates to <code>bounding_volume::do_ortho_transform</code>.
+ *
+ * @param M orthonormal transformation matrix.
+ */
+void openvrml::bounding_volume::ortho_transform(const mat4f & M)
+{
+    this->do_ortho_transform(M);
+}
+
+/**
+ * @fn void openvrml::bounding_volume::do_ortho_transform(const mat4f & M)
+ *
+ * @brief Called by <code>bounding_volume::ortho_transform</code>.
+ *
  * @param M orthonormal transformation matrix in mat4f format
  */
 
 /**
- * @fn void openvrml::bounding_volume::transform(const mat4f & M)
- *
  * @brief Transform this bounding volume using an affine transfom.
  *
  * Affine transformations can include nonuniform scaling. It is much
@@ -184,6 +278,20 @@ openvrml::bounding_volume::~bounding_volume() {}
  * non-affine argument. Note that VRML Transform nodes only allow
  * affine transformations, so unless you're doing something tricky
  * this routine should always be safe.
+ *
+ * Delegates to <code>bounding_volume::do_transform</code>.
+ *
+ * @param M affine transformation matrix.
+ */
+void openvrml::bounding_volume::transform(const mat4f & M)
+{
+    this->do_transform(M);
+}
+
+/**
+ * @fn void openvrml::bounding_volume::do_transform(const mat4f & M)
+ *
+ * @brief Called by <code>bounding_volume::transform</code>.
  *
  * @param M affine transformation matrix.
  */
@@ -222,7 +330,7 @@ openvrml::bounding_sphere::bounding_sphere():
 /**
  * @brief Destroy.
  */
-openvrml::bounding_sphere::~bounding_sphere()
+openvrml::bounding_sphere::~bounding_sphere() throw ()
 {}
 
 namespace {
@@ -258,7 +366,7 @@ namespace {
  */
 openvrml::bounding_volume::intersection
 openvrml::bounding_sphere::
-intersect_frustum(const openvrml::frustum & frustum) const
+do_intersect_frustum(const openvrml::frustum & frustum) const
 {
     if (this->maximized()) { return bounding_volume::partial; }
     if (this->radius_ == -1.0f) { return bounding_volume::partial; } // ???
@@ -318,30 +426,11 @@ intersect_frustum(const openvrml::frustum & frustum) const
 }
 
 /**
- * @brief Extend the bounding_volume to enclose @p bv.
- *
- * @param bv    a bounding volume.
- */
-void openvrml::bounding_sphere::extend(const bounding_volume & bv)
-{
-    // doing two tests isn't a big deal, if there get to be too many
-    // more kinds of bounding volumes, move to a double dispatch
-    // pattern.
-    const bounding_sphere * bs = 0;
-    const axis_aligned_bounding_box * ab = 0;
-    if ((bs = dynamic_cast<const bounding_sphere *>(&bv))) {
-        this->extend(*bs);
-    } else if ((ab = dynamic_cast<const axis_aligned_bounding_box *>(&bv))) {
-        this->extend(*ab);
-    }
-}
-
-/**
  * @brief Extend to enclose @p p.
  *
  * @param p a point.
  */
-void openvrml::bounding_sphere::extend(const vec3f & p)
+void openvrml::bounding_sphere::do_extend(const vec3f & p)
 {
     using openvrml_::fequal;
 
@@ -400,7 +489,8 @@ void openvrml::bounding_sphere::extend(const vec3f & p)
  *
  * @param bbox  an axis-aligned bounding box
  */
-void openvrml::bounding_sphere::extend(const axis_aligned_bounding_box & bbox)
+void
+openvrml::bounding_sphere::do_extend(const axis_aligned_bounding_box & bbox)
 {}
 
 /**
@@ -408,7 +498,7 @@ void openvrml::bounding_sphere::extend(const axis_aligned_bounding_box & bbox)
  *
  * @param b a bounding sphere
  */
-void openvrml::bounding_sphere::extend(const bounding_sphere & b)
+void openvrml::bounding_sphere::do_extend(const bounding_sphere & b)
 {
     using openvrml_::fequal;
 
@@ -476,7 +566,7 @@ void openvrml::bounding_sphere::extend(const bounding_sphere & b)
  *
  * @param points    points.
  */
-void openvrml::bounding_sphere::enclose(const std::vector<vec3f> & points)
+void openvrml::bounding_sphere::do_enclose(const std::vector<vec3f> & points)
 {
     // doing an extend() for each point is ok, but there are
     // faster algorithms reference "An Efficient Bounding Sphere"
@@ -584,7 +674,7 @@ void openvrml::bounding_sphere::radius(const float r)
 /**
  * @brief Extend the bounding sphere to infinity.
  */
-void openvrml::bounding_sphere::maximize()
+void openvrml::bounding_sphere::do_maximize()
 {
     this->radius_ = std::numeric_limits<float>::max();
     this->center_ = vec3f(0.0, 0.0, 0.0);
@@ -596,7 +686,7 @@ void openvrml::bounding_sphere::maximize()
  * @return @c true if the bounding_sphere has been maximized; @c false
  *         otherwise.
  */
-bool openvrml::bounding_sphere::maximized() const
+bool openvrml::bounding_sphere::do_maximized() const
 {
     if (this->radius_ == std::numeric_limits<float>::max()) { return true; }
     return false;
@@ -607,7 +697,7 @@ bool openvrml::bounding_sphere::maximized() const
  *
  * @param t transformation matrix.
  */
-void openvrml::bounding_sphere::ortho_transform(const mat4f & t)
+void openvrml::bounding_sphere::do_ortho_transform(const mat4f & t)
 {
     if (this->maximized()) { return; }
     if (this->radius_ == -1) { return; }
@@ -625,7 +715,7 @@ void openvrml::bounding_sphere::ortho_transform(const mat4f & t)
  *
  * @param t transformation matrix.
  */
-void openvrml::bounding_sphere::transform(const mat4f & t)
+void openvrml::bounding_sphere::do_transform(const mat4f & t)
 {
     if (this->maximized()) { return; }
     if (this->radius_ == -1) { return; }
@@ -658,39 +748,23 @@ void openvrml::bounding_sphere::transform(const mat4f & t)
 /**
  * @brief Destroy.
  */
-openvrml::axis_aligned_bounding_box::~axis_aligned_bounding_box()
+openvrml::axis_aligned_bounding_box::~axis_aligned_bounding_box() throw ()
 {}
 
 /**
  * @todo Implement me!
  */
 openvrml::bounding_volume::intersection
-openvrml::axis_aligned_bounding_box::intersect_frustum(
-    const openvrml::frustum & frustum) const
+openvrml::axis_aligned_bounding_box::
+do_intersect_frustum(const openvrml::frustum & frustum) const
 {
     return bounding_volume::partial;
 }
 
 /**
- * @brief Extend the bounding_volume to enclose @p bv.
- *
- * @param bv    a bounding volume.
- */
-void openvrml::axis_aligned_bounding_box::extend(const bounding_volume & bv)
-{
-    const bounding_sphere * bs = 0;
-    const axis_aligned_bounding_box * ab = 0;
-    if ((bs = dynamic_cast<const bounding_sphere *>(&bv))) {
-        this->extend(*bs);
-    } else if ((ab = dynamic_cast<const axis_aligned_bounding_box *>(&bv))) {
-        this->extend(*ab);
-    }
-}
-
-/**
  * @todo Implement me!
  */
-void openvrml::axis_aligned_bounding_box::extend(const vec3f & p)
+void openvrml::axis_aligned_bounding_box::do_extend(const vec3f & p)
 {}
 
 /**
@@ -698,13 +772,13 @@ void openvrml::axis_aligned_bounding_box::extend(const vec3f & p)
  */
 void
 openvrml::axis_aligned_bounding_box::
-extend(const axis_aligned_bounding_box & b)
+do_extend(const axis_aligned_bounding_box & b)
 {}
 
 /**
  * @todo Implement me!
  */
-void openvrml::axis_aligned_bounding_box::extend(const bounding_sphere& b)
+void openvrml::axis_aligned_bounding_box::do_extend(const bounding_sphere& b)
 {}
 
 /**
@@ -717,34 +791,32 @@ void openvrml::axis_aligned_bounding_box::extend(const bounding_sphere& b)
  * @todo Implement me!
  */
 void
-openvrml::axis_aligned_bounding_box::enclose(const std::vector<vec3f> & points)
+openvrml::axis_aligned_bounding_box::
+do_enclose(const std::vector<vec3f> & points)
 {}
 
 /**
  * @brief Implement me!
  */
-void openvrml::axis_aligned_bounding_box::maximize()
+void openvrml::axis_aligned_bounding_box::do_maximize()
+{}
+
+/**
+ * @brief Implement me!
+ */
+bool openvrml::axis_aligned_bounding_box::do_maximized() const
 {
+    return true;
 }
 
 /**
  * @brief Implement me!
  */
-bool openvrml::axis_aligned_bounding_box::maximized() const
-{
-  return true;
-}
+void openvrml::axis_aligned_bounding_box::do_ortho_transform(const mat4f & M)
+{}
 
 /**
  * @brief Implement me!
  */
-void openvrml::axis_aligned_bounding_box::ortho_transform(const mat4f & M)
-{
-}
-
-/**
- * @brief Implement me!
- */
-void openvrml::axis_aligned_bounding_box::transform(const mat4f & M)
-{
-}
+void openvrml::axis_aligned_bounding_box::do_transform(const mat4f & M)
+{}
